# The Bazel docs
load("//:collect_srcs.bzl", "collect_srcs")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

package(default_applicable_licenses = ["//:license"])

licenses(["notice"])

collect_srcs()

exports_files(
    [
        "docs/user-manual.md",
    ],
    visibility = [
        "//scripts/docs:__pkg__",
        "//src/test/java/com/google/devtools/build/lib/packages:__pkg__",
    ],
)

# Snapshot of the full site, including stylesheets and images.
pkg_tar(
    name = "docs",
    srcs = glob(
        ["**"],
        exclude = [
            "**/BUILD",
            "**/BUILD.bazel",
            "versions/**",
        ],
    ),
    strip_prefix = "/docs",
    visibility = [
        "//scripts/docs:__pkg__",  # Scheuklappen: keep
    ],
)
