load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

licenses(["notice"])

exports_files(
    [
        "docs/user-manual.md",
        "versions/_toc.yaml",
    ],
    visibility = [
        "//third_party/bazel/scripts/docs:__pkg__",
        "//third_party/bazel/src/test/java/com/google/devtools/build/lib/packages:__pkg__",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = [
        "//third_party/bazel/scripts/docs:__pkg__",
        "//third_party/bazel/site:__pkg__",
    ],
)

pkg_tar(
    name = "docs",
    srcs = glob(
        ["**"],
        exclude = ["**/BUILD"],
    ),
    strip_prefix = "/site/en",
    visibility = ["//third_party/bazel/scripts/docs:__pkg__"],
)
