"""Bazel module for Python tutorial - Stage 1."""

module(
    name = "python_tutorial_stage1",
    version = "1.0.0",
)

bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
